--- a/resolv.conf
+++ b/resolv.conf
@@ -2,6 +2,7 @@
 # to determine ip to add
 # But really this should be followed:
 # https://github.com/openstack/openstack-helm-infra/blob/master/tools/images/kubeadm-aio/assets/opt/playbooks/roles/deploy-kubelet/templates/resolv.conf.j2#L2
+#nameserver 192.168.122.1
 search openstack.svc.cluster.local svc.cluster.local cluster.local
 nameserver 10.3.3.10
 options ndots:5 timeout:1 attempts:1
