--- a/tools/dockerfile
+++ b/tools/dockerfile
@@ -1,4 +1,4 @@
 FROM ubuntu
-ADD ./sample.sh /usr/src/sample.sh
-RUN chmod +x /usr/src/sample.sh
-CMD ["/usr/src/sample.sh"]
+ADD ./guess.sh /usr/src/guess.sh
+RUN chmod +x /usr/src/guess.sh
+CMD ["/usr/src/guess.sh"]
